@@ -1,15 +1,79 @@
-# general_template
+# 💜 Project X – A Surprise Birthday Game Experience 🎁
 
-This is a general template for any repo in this project.
+**Project X** is a JavaFX-based, multi-checkpoint game experience handcrafted with love and creativity. Designed as a surprise birthday gift, the game unfolds through a series of challenges, visuals, and heartwarming messages, culminating in a personalized celebration.
 
-# Description
+---
 
-Here goes the description
+## 🎮 Game Structure
 
-# Credits
+The game is divided into **three checkpoints**, each unlocking sequentially:
 
-[@StaticOwl](https://www.github.com/StaticOwl)
+### ✅ Checkpoint 1 – Wordle Challenge
+A 5-letter word guessing game inspired by the classic **Wordle**. Type in your guesses and hit **Enter**. Hints become progressively more visible after failed attempts.
 
-# Current Status
+### ✅ Checkpoint 2 – Snakes & Ladders
+A playful board game with a twist:
+- Arrows represent snakes 🐍 and ladders 🪜.
+- Dynamic dice rolls and grid animations.
+- Beautiful custom background imagery and styled tokens.
 
-Here goes the the current status
+### ✅ Checkpoint 3 – Final Tiles Puzzle
+A **3x3 tile grid** hiding the final celebration. Only one tile is correct – choose wisely! The rest will flip to surprise visuals 💐.
+
+---
+
+## ✨ Features
+
+- 💜 Personalized visuals and background messages.
+- 🪄 Smooth transitions and fade animations.
+- 🧠 Intelligent hints, witty overlay messages.
+- 🎨 Rich styling with custom CSS and UI consistency.
+
+---
+
+## 🔧 Tech Stack
+
+- **Java 17**
+- **JavaFX 21**
+- **Kotlin**
+- **FXML-based UI**
+
+---
+
+## 📁 Project Structure
+```
+project_xo/
+├── src/
+│   ├── com.projectx.controller/
+│   └── com.projectx.utils/
+├── resources/
+│   ├── *.fxml
+│   ├── style.css
+│   └── assets/ (some files are missing for privacy reasons. You are welcome to add your files)
+├── target/
+└── README.md
+```
+
+---
+
+## ▶️ Running the Project
+
+### Using JDK 17 and JavaFX:
+```bash
+java --module-path path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml -jar ProjectXO-1.0-SNAPSHOT.jar
+```
+
+---
+
+## 📸 Credits & Heart
+This project was created with intent, affection, and a pinch of magic for someone truly special. ❤️
+
+---
+
+## 🔐 License
+This project is **personal & gift-based**, not intended for commercial distribution.
+
+---
+
+## ✍️ Author
+Made with 💜 by [@StaticOwl](https://www.github.com/StaticOwl).
